styles/style.css
@font-face {
    font-family: JosefinRegular;
    src: url(../fonts/JosefinSans-Regular.ttf);
}

@font-face {
    font-family: JosefinItalic;
    src: url(../fonts/JosefinSans-Italic.ttf);
}

@keyframes breath {
    0%   { background-size: 100% auto; }
    50% { background-size: 140% auto; }
    100% { background-size: 100% auto; }
  }
   html {
      scroll-behavior: smooth;
      font-family: "JosefinRegular";
  } 

 header {
    background-color: rgba(0, 0, 0, 0.73);
} 

 .primary_styling {
    font-size: 4em;
    text-transform: uppercase;
    color: #F0E9DF;
    text-align: center;

}

.welcome_section {
    background-image: url(../images/DSC_3607.png);
    background-repeat: no-repeat;
    background-size: cover;
    
}

  
 .welcome_wrapper {
   
    display: flex;
    justify-content: space-around;
    height: 50em;
    align-items: center;
    flex-direction: column;
}

.home_logo {
    margin-top: 4em;
}

.cta_button_primary {
    font-size: 30px;
    background-color: #C2653A;
    color: #F0E9DF;
    text-decoration: none;
    border: none;
    padding: 0.4em 0.7em;
    transition: ease-in-out;
    transition-duration: 0.3s;
}

.cta_button_primary:hover {
    background-color: #7e4125;
}

.welcome-info {
     background-color: #000;
     z-index: 14;
     position: relative;
}

.welcome-info p {
    font-size: 23px;
    padding: 1em;
    color: #F0E9DF;
    
}

.paragraph_wrapper {
    max-width: 90%;
    padding: 1.1em;
    margin: auto;
}

.cta_buttons {
    display: flex;
    width: 90%;
    justify-content: space-between;
}

#hidden {
    visibility: hidden;
}

.booking_wrapper {
    text-align: center;
}

.booking_wrapper p {
    color: #F0E9DF;
    text-decoration: none;
    font-size: 20px;
    padding: 15px;
} 

 .hamburger {
    display: none;
    margin-right: 1em;
}

.bar {
    display: block;
    width: 25px;
    height: 3px;
    margin: 5px auto;
    -webkit-transition: all 0.3s ease-in-out;
    transition: all 0.3s ease-in-out;
    background-color: #F0E9DF;
}

.nav-menu {
    display: flex;
    justify-content: space-between;
    align-items: center;
}

.nav-logo {
    width: 7em;
} 


.nav-link{
    font-size: 20px;
    font-weight: 400;
    color: #F0E9DF;
    text-shadow: 0px 3px 6px rgba(0, 0, 0, 0.164);
    padding: 1em;
    text-decoration: none;
    
}

.nav-link:hover{
    color:#C2653A;
    transition: ease-in-out;
    transition-duration: 0.3s;
}

.mobile_navbar-logo {
    display: none;
}

ul.nav-menu {
    margin: auto;
    margin-top: 1em;
} 

.highlights {
    background-image: url(../images/DSC_3493.jpg);
    background-repeat: no-repeat;
    background-position: top;
    background-size: cover;
    margin-top: -5px;
}

.heading {
    padding: 1em;
}

.extras_wrapper {
    display: flex;
    justify-content: space-around;
    align-items: center;
    padding-bottom: 3em;
}

.extras {
    display: flex;
    align-items: center;
    padding: 1em;
}

.icon_styling {
    height: 3em;
}

.icon_description {
    font-size: 1.3em;
    color: #F0E9DF;
    padding: 1em;
}

.cta {
    width: 76%;
    margin: auto;
    padding-bottom: 5em;
}

#availability {
    display: flex;
    font-size: 25px;
    margin: auto;
    align-items: center;
}

#availability_img {
    margin-right: 15px;
}

.suroundings {
    background-color: #7A7254
}

.surround_content-wrapper {
    background-color: #A39B7C;
}

.suroundings h1 {
    font-size: 3em;
    padding: 0.5em; 
}

.surroundings_content {
    display: flex;
}

.paragraph_style {
    color: #F0E9DF;
    font-size: 2.1em;
    padding: 2.2em;
    margin: auto;
    background-image: url(../images/11_frosted.jpg);
}

.right_image {
    width: 50%;
    background-repeat: no-repeat;
    background-size: cover;
}

#mobile {
    display: none;
}

#desktop {
    display: none;
}

.progress{
    height:10px;
    /* background: #000; */
    width:100%;
    position: fixed;
    top: 0;
    left: 0;
    z-index: 15;

  }
  .progress__highlight{
    transition: width 0.15s linear;
    background:#C2653A;
    height:100%;
    width:0%;
  }

  /* footer styling mobile first v2.0 */

footer {
    background-color: #474333;
    justify-content: space-around;
    align-items: center;
    
}

.social_media {
    text-align: center;
}

.social_media p {
    font-size: 20px;
    color: #F0E9DF;
    padding: 0.5em;
}

.social_media-icons {
    display: flex;
    align-items: center;
    justify-content: space-evenly;
    padding: 1em;
    flex-direction: row;
    margin: auto;
    width: 90%;
}

.social_media-icons a {
    padding: 0.5em;
}

.contact_info {
    padding: 1em;
}

.contact_info img {
    padding: 0.3em;
}

.location, .phone, .mail {
    justify-content: center;
    padding: 0.5em;
    display: flex;
    align-items: center;
}

.location p, .phone p, .mail p {
    font-size: 20px;
    color: #F0E9DF;
    text-decoration: none;
}

/* footer style end */



* {box-sizing: border-box}
.mySlides {display: none}
img {vertical-align: middle;}

body {
    background-color: #ABA590;
}

/* Slideshow container */
.slideshow-container {
  max-width: 1000px;
  position: relative;
  margin: auto;

}

/* Next & previous buttons */
.prev, .next {
  cursor: pointer;
  position: absolute;
  top: 50%;
  width: auto;
  padding: 16px;
  margin-top: -22px;
  color: white;
  font-weight: bold;
  font-size: 18px;
  transition: 0.6s ease;
  border-radius: 0 3px 3px 0;
  user-select: none;
}

/* Position the "next button" to the right */
.next {
    right: 33px;
  border-radius: 3px 0 0 3px;
}

/* On hover, add a black background color with a little bit see-through */
.prev:hover, .next:hover {
  background-color: rgba(0,0,0,0.8);
}

/* Caption text */
.text {
  color: #f2f2f2;
  font-size: 15px;
  padding: 8px 12px;
  position: absolute;
  bottom: 8px;
  width: 100%;
  text-align: center;
}

/* Number text (1/3 etc) */
.numbertext {
  color: #f2f2f2;
  font-size: 12px;
  padding: 8px 12px;
  position: absolute;
  top: 0;
}
/* ... */

